feat: add styles.css file

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <meta name="Keywords" content="Html, css, web design">
     <meta property="og:title" content="QuickFood">
     <meta property="og:description" content="QuickFood é o delivery rápido e com refeições saudáveis, feitas para quem busca praticidade sem abrir mão da qualidade e do sabor.">
+    <link rel="stylesheet" href="./src/styles/styles.css">
     <title>QuickFood</title>
 </head>
 <body>
-    
+
 </body>
 </html>
