--- a/index.html
+++ b/index.html
@@ -13,5 +13,11 @@
 </head>
 <body>
 
+    <header>
+        <div>
+            <img src="./src/assets/images/logo.svg" alt="Logo QuickFood" loading="lazy">
+        </div>
+    </header>
+
 </body>
 </html>
