feat: creat header in index.html

--- a/index.html
+++ b/index.html
@@ -13,11 +13,35 @@
 </head>
 <body>
 
+    <!------ Header ------>
     <header>
         <div>
             <img src="./src/assets/images/logo.svg" alt="Logo QuickFood" loading="lazy">
         </div>
+        <nav class="nav-header">
+            <ul>
+                <a href="#"><li><Span>Home</Span></li></a>
+                <a href="#"><li>Products</li></a>
+                <a href="#"><li>Contact us</li></a>
+                <a href="#"><li>About</li></a>
+            </ul>
+        </nav>
+        <div class="header-content">
+            <div>
+                <img src="./src/assets/images/lupa.svg" alt="">
+            </div>
+
+            <div>
+                <img src="./src/assets/images/carrinho.svg" alt="">
+            </div>
+
+            <div>
+                <button>Login</button>
+            </div>
+        </div>
     </header>
+
+    <!------ fim Header ------>
 
 </body>
 </html>
