feat: create main in index.html

--- a/index.html
+++ b/index.html
@@ -36,12 +36,39 @@
             </div>
 
             <div>
-                <button>Login</button>
+                <a href="#"><button>Login</button></a>
+                
             </div>
         </div>
     </header>
 
     <!------ fim Header ------>
+
+    <!------ main ------>
+     
+    <main>
+        <div class="main-container">
+            <div>
+                <h1>We deliver <span>Healthy & Delicious</span> Food</h1>
+                <p>Order online or book a table.We are always ready to fulfill your demand.You would get fastest delivery you could ever imagine.Keep in touch with us to take your delicious foods.</p>
+            </div>
+
+            <div class="header-button">
+                <div>
+                    <a href="#"><button class="order-now">Order Now</button></a>
+                </div>
+                <div>
+                    <a href="#"><button class="explore-products">Explore Products</button></a>
+                </div>
+            </div>
+        </div>
+
+        <div>
+            <img src="./src/assets/images/DeliciousFood.svg" alt="pote de salada com frango" title="pote de salada com frango" loading="lazy">
+        </div>
+    </main>
+
+    <!------ Fim main ------>
 
 </body>
 </html>
