feat: create the Why Choose Us section in index.html

--- a/index.html
+++ b/index.html
@@ -70,5 +70,67 @@
 
     <!------ Fim main ------>
 
+     <!------  Why Choose Us ------>
+
+     <section class="why-choose-us">
+        <h1>Why Choose Us?</h1>
+            <p>We offer delicious and healthy foods, quick payment and we deliver fast.</p>
+            
+        <div class="section-container">
+            <div class="choose-cards">
+                <div>
+                    <img src="./src/assets/images/Best-Offer.png" alt="desenho ilustrativo de um Cliente satisfeito aproveitando a melhor oferta" title="aproveite nossas ofertas">
+                </div>
+
+                <div>
+                    <h2>Best Offer</h2>
+                    <p>We offer you healthy & delicious food with good hygiene.</p>
+                </div>
+
+                <div class="customestatistics">
+                    <h2>40+</h2>
+                    <p>Foods Available</p>
+                </div>
+            </div>
+
+            <div class="choose-cards">
+                <div>
+                    <img src="./src/assets/images/Easy-Payment.svg" alt="desenho ilustrativo de uma pessoa passando cartão" title="Pagamento Fácil e Rápido">
+                </div>
+
+                <div>
+                    <h2>Easy Payment</h2>
+                    <p>Payment is easy and quick to order your foods.</p>
+                </div>
+                
+                <div class="customestatistics">
+                    <h2>600+</h2>
+                    <p>Happy Clients</p>
+                </div>
+
+            </div>
+
+            <div class="choose-cards">
+                <div>
+                    <img src="./src/assets/images/Fastest-delivery.svg" alt="desenho ilustrativo de uma pesoa dirigindo uma moto" title="Entrega rápida">
+                </div>
+
+                <div>
+                    <h2>Fastest delivery</h2>
+                    <p>Our delivery is super active and run delivery inter state</p>
+                </div>
+
+                <div class="customestatistics">
+                    <h2>5K+</h2>
+                    <p>Online Orders</p>
+                </div>
+
+            </div>
+        </div>
+     </section>
+
+     <!------ Fim Why Choose Us------>
+
+
 </body>
 </html>
