feat: create the special dishes section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
 
         <div>
-            <img src="./src/assets/images/DeliciousFood.svg" alt="pote de salada com frango" title="pote de salada com frango" loading="lazy">
+            <img src="./src/assets/images/DeliciousFood.svg" alt="pote de Salada de Alho" title="pote de Salada de Alho" loading="lazy">
         </div>
     </main>
 
@@ -130,6 +130,56 @@
      </section>
 
      <!------ Fim Why Choose Us------>
+
+     <!------ Special dishes ------>
+
+     <section class="special-dishes ">
+        <h1>Special dishes for you</h1>
+        <div class="special-cotainer">
+            <div class="special-cards">
+                <div>
+                    <img src="./src/assets/images/Garlic-Salad.svg" alt="pote de Salada de Alho" title="Salada de Alho">
+                </div>
+                <div>
+                    <h2>Garlic Salad</h2>
+                    <p>Caprese is a classic Italian salad made with sliced tomatoes.    </p>
+                </div>
+                <div class="cards-button">
+                    <a href="#"><button>Buy Now</button></a>
+                </div>
+               </div>
+
+               <div class="special-cards">
+                <div>
+                    <img src="./src/assets/images/Caprese-Salad.svg" alt="salada italiana com tomates fatiados." title="Salada italiana">
+                </div>
+                <div>
+                    <h2>Caprese Salad</h2>
+                    <p>Caprese is a classic Italian salad made with sliced tomatoes.</p>
+                </div>
+                <div class="cards-button">
+                    <a href="#"><button>Buy Now</button></a>
+                </div>
+               </div>
+
+               <div class="special-cards">
+                <div>
+                    <img src="./src/assets/images/Garlic-Salad.svg" alt="pote de Salada de Alho" title="Salada de Alho">
+                </div>
+                <div>
+                    <h2>Garlic Salad</h2>
+                    <p>Caprese is a classic Italian salad made with sliced tomatoes.    </p>
+                </div>
+                <div class="cards-button">
+                    <a href="#"><button>Buy Now</button></a>
+                </div>
+               </div>
+        </div>
+
+     </section>
+
+   
+     <!------ Fim Special dishes ------>
 
 
 </body>
