feat: create About Us section in index.html

--- a/index.html
+++ b/index.html
@@ -255,6 +255,23 @@
 
     <!------ Fim  our clients ------>
 
+    <!------ About Us ------>
+
+    <section class="About-Us">
+        <div>
+            <h1>About Us</h1>
+            <p>The best way to make it works is to have a smart list of all the restaurants and cuisines organized by location, type of food (fast food, or more gourmet dishes), food preferences (vegetarian, meat lovers, any special diets like gluten-free diets), different nation’s cuisine, etc.</p>
+            <div>
+                <a href="#"><button>Learn More</button></a>
+        </div>
+            </div>
+        <div>
+            <img src="./src/assets/images/About-Us.svg" alt="">
+        </div>
+    </section>
+
+    <!------ Fim  About Us ------>
+
 
 </body>
 
