feat: create the form

--- a/index.html
+++ b/index.html
@@ -272,6 +272,27 @@
 
     <!------ Fim  About Us ------>
 
+    <!------ formulário ----->
+
+    <form>
+        <div class="Newsteller">
+            <h1>Subscribe to our Newsteller</h1>
+            <p>Join Us and Get Update on our Available Product.</p>
+        </div>
+
+        <div class="formulario">
+            <div class="formulario-subscribe">
+                <input type="text" placeholder="Enter your email address">
+                <div class="button">
+                    <button class="Subscribe">Subscribe</button>
+                </div>
+            </div>            
+        </div>
+    </form>
+
+    <!------ Fim formulário ----->
+
+
 
 </body>
 
